fix: gap at the bottom when menu is open

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  min-height: 100dvh;
   padding: 0 1rem;
   background-color: $white;
 
